@@ -1,3 +1,8 @@
+2010-02-16  Olaf Lenz  <olenz@qwghlm>
+
+	* pbctools.tcl: Fixed email address of olenz.
+	* pbcwrap.tcl: Added compound type "fragment".
+
 2009-11-04  Olaf Lenz  <olenz@qwghlm>
 
 	* pbcset.tcl: Incorporated Jan Saams commits to the VMD CVS, log
